<resources>
    <string name="app_name">SecureU</string>
    <string name="title_activity_maps">Map</string>
    <string name="cur_loc">My Location</string>
    <string name="help">HELP!</string>
    <string name="emer">Emergency Call</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add Contacts</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="contactPref">Contacts</string>
    <string name="add_contacts">Tap to add contacts</string>
    <string name="view_contacts">Tap to view saved contacts</string>
    <string name="pref_title_view_friends_to_messages">View Contacts</string>
    <string name="support">Support</string>
    <string name="pref_title_terms">Terms and Conditions</string>
    <string name="pref_title_feedback">Feedback</string>
    <string name="pref_title_about">About Us</string>
    <string name="about">SecureU v1.1</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_about">About Us</string>
</resources>
