<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/contactPref">
        <Preference
            android:key="add"
            android:summary="@string/add_contacts"
            android:title="@string/pref_title_add_friends_to_messages" />
        <Preference
            android:key="view"
            android:summary="@string/view_contacts"
            android:title="@string/pref_title_view_friends_to_messages" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/support">
        <Preference
            android:key="terms"
            android:title="@string/pref_title_terms" />
        <Preference
            android:key="feedback"
            android:title="@string/pref_title_feedback" />
        <Preference
            android:key="about"
            android:summary="SecureU v1.0"
            android:title="@string/about" />
    </PreferenceCategory>

</PreferenceScreen>